deployment/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetrun-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aspnetrunbasics
                port:
                  number: 8089
